i18n/zh-CN/docusaurus-plugin-content-docs/version-1.2/sql-manual/sql-reference/Show-Statements/SHOW-TABLET.md
---
{
    "title": "SHOW-TABLET",
    "language": "zh-CN"
}
---

<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->

## SHOW-TABLET

### Name

SHOW TABLET

## 描述

该语句用于显示指定tablet id 信息（仅管理员使用）

语法：

```sql
SHOW TABLET tablet_id
```

## 举例

1.  显示指定 tablet id 为 10000 的 tablet 的父层级 id 信息

   ```sql
   SHOW TABLET 10000;
   ```

### Keywords

    SHOW, TABLET

### Best Practice

